Fix Branch validation error
